--- a/ProjetSOR/PartieRmiProjetImage/src/config/config.properties
+++ b/ProjetSOR/PartieRmiProjetImage/src/config/config.properties
@@ -1,3 +1,3 @@
-url = jdbc:mysql://localhost/projetimage
-user = leo
-password = leo
+url = jdbc:mysql://obiwan2.univ-brest.fr/zfm1-zmahehu00
+user = root
+password = ""
