--- a/ProjetSOR/PartieRmiProjetImage/bin/config/config.properties
+++ b/ProjetSOR/PartieRmiProjetImage/bin/config/config.properties
@@ -1,3 +1,3 @@
-url = jdbc:mysql://obiwan2.univ-brest.fr/zfm1-zmahehu00
-user = root
-password = ""
+url = jdbc:mysql://127.0.0.1:3306/projetimage
+user = admin
+password = admin
